--- a/website/src/styles/index.scss
+++ b/website/src/styles/index.scss
@@ -13,6 +13,8 @@ figure {
   padding: 0;
   margin: 0;
   border: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 /* Default font and size */
